<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_app_50"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_app">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:gravity="center"
            android:text="@string/seleccione_mascota"
            android:textColor="@color/texto_app"
            android:textSize="@dimen/dimen_25sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="TextView" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginRight="@dimen/dimen_100dp"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="TextView" />

        <EditText
            android:id="@+id/editTextDate2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginRight="@dimen/dimen_100dp"
            android:inputType="date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="TextView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editTextDate3"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/rbMacho"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/macho"
                                android:layout_marginHorizontal="@dimen/dimen_10dp"

                                />

                            <RadioButton
                                android:id="@+id/rbHembra"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hembra"
                                android:layout_marginHorizontal="@dimen/dimen_10dp"
                                 />

                        </RadioGroup>
                    </LinearLayout>





                </LinearLayout>
        </LinearLayout>



        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_50dp"

            android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_weight="1" />


            </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/castracion"
                android:gravity="center"
                android:layout_marginTop="12dp"
                    android:layout_weight="3"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/dimen_25dp">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <RadioButton
                            android:id="@+id/rbSumar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Si"
                            android:layout_marginHorizontal="@dimen/dimen_10dp"

                            />

                        <RadioButton
                            android:id="@+id/rbRestar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/No"
                            android:layout_marginHorizontal="@dimen/dimen_10dp"
                            />

                    </RadioGroup>
                </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
