<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res/android"
    android:background="@color/orange_app_50"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/orange_app">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:textSize="@dimen/dimen_25sp"
            android:textStyle="bold"
            android:textColor="@color/texto_app"
            android:text="@string/seleccione_mascota"/>

    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">



                <androidx.cardview.widget.CardView
                    android:id="@+id/hamster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orange_app_50"
                    android:layout_marginTop="@dimen/dimen_20sp"
                    app:cardCornerRadius="@dimen/dimen_100dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_20sp"
                        android:src="@drawable/ic_calendario" />


                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hamster"
                    android:textColor="@color/color_del_texto"
                    android:textSize="@dimen/dimen_25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">



                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_canario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orange_app_50"
                    android:layout_marginTop="@dimen/dimen_20sp"
                    app:cardCornerRadius="@dimen/dimen_100dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_20sp"
                        android:src="@drawable/ic_alimentacion" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/canario"
                    android:textColor="@color/color_del_texto"
                    android:textSize="@dimen/dimen_25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">



                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_gato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orange_app_50"
                    android:layout_marginTop="@dimen/dimen_20sp"
                    app:cardCornerRadius="@dimen/dimen_100dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_20sp"
                        android:src="@drawable/ic_alimentacion" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gato"
                    android:textColor="@color/color_del_texto"
                    android:textSize="@dimen/dimen_25sp"
                    android:textStyle="bold" />

            </LinearLayout>

    </LinearLayout>




     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_conejo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange_app_50"

                app:cardCornerRadius="@dimen/dimen_100dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_20sp"
                    android:src="@drawable/ic_calendario" />


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/conejo"
                android:textColor="@color/color_del_texto"
                android:textSize="@dimen/dimen_25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">



            <androidx.cardview.widget.CardView
                android:id="@+id/cv_perro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange_app_50"
                app:cardCornerRadius="@dimen/dimen_100dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_20sp"
                    android:src="@drawable/ic_alimentacion" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/perro"
                android:textColor="@color/color_del_texto"
                android:textSize="@dimen/dimen_25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">



            <androidx.cardview.widget.CardView
                android:id="@+id/cv_tortuga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange_app_50"
                app:cardCornerRadius="@dimen/dimen_100dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_20sp"
                    android:src="@drawable/ic_alimentacion" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tortuga"
                android:textColor="@color/color_del_texto"
                android:textSize="@dimen/dimen_25sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    </LinearLayout>


</LinearLayout>